# nu-afolu

./: .env.example  .gitignore  .pre-commit-config.yaml  01_calibration.py  02_transition_closure.py  README.md  analysis.py  data.dvc  id_map.toml  pyproject.toml  test.ipynb  transition_dict.json
.dvc/: config
config/: transition_dict.json
dagster/: dagster.yaml
data/: input.dvc  output.dvc
data/output/: .gitignore  area_raster.dvc  area_table.dvc  chen_pseudo_tables.dvc  transition_raster.dvc  transition_table.dvc
data/output/bbox/: .gitignore  ee.dvc  shapely.dvc
data/output/large/: .gitignore  area_raster.json.dvc  area_raster_materialized.dvc  area_table_large.parquet.dvc  transition_raster.json.dvc  transition_raster_materialized.dvc  transition_table_large.nc.dvc
data/output/large/bbox/: .gitignore  ee.json.dvc  shapely.geoparquet.dvc
docs/: data_provenance.md  start_here.md  upstream.md
implementation_plan/: README.md  analysis_contracts.md  marimo_style_guide.md  notebook_roadmap.md  pseudo_transition_methods.md
notebooks/: 00_artifact_inventory.py  01_calibration.py  01_historical_contract_checks.py  01_start.py  02_chen_2020_compatibility.py  02_transition_closure.py  03_method_exploration.py  03_spatial_resolution_diagnostics.py  04_external_settlement_validation.py  04_historical_settlement_transition_priors.py  05_chen_future_deltas.py  06_pseudo_transition_allocation.py  07_pseudo_transition_interpretation.py  old_calibration.py
src/nu_afolu/: _artifact_validation_core.py  _artifact_validation_schemas.py  _calibration_validation.py  _exploration_validation.py  _external_artifact_validation.py  _transition_artifact_validation.py  artifact_validation.py  chen.py  constants.py  definitions.py  external_validation.py  growth_plausibility.py  metrics.py  transition_feasibility.py  utils.py
src/nu_afolu/defs/: resources.py
src/nu_afolu/defs/assets/: bbox.py  graph.py  raster_materialized.py  tables.py
src/nu_afolu/defs/assets/tables/: area.py  common.py  transition.py
tests/: test_artifact_validation.py  test_chen.py  test_external_validation.py  test_growth_plausibility.py  test_metrics.py  test_transition_feasibility.py
