[project]
name = "nu-afolu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "RodolfoFigueroa", email = "4rodolfofigueroa2@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "cfc-dagster-utils",
    "dagster-dg-cli>=1.13.2",
    "dagster-webserver>=1.13.2",
    "dask>=2026.7.1",
    "earthengine-api>=1.7.22",
    "geedim>=2.0.0",
    "geopandas>=1.0.1",
    "leafmap>=0.62.0",
    "marimo>=0.23.10",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "psycopg2>=2.9.12",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sisepuede",
    "toml>=0.10.2",
    "xhistogram>=0.3.2",
]

[project.scripts]
nu-afolu = "nu_afolu:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
sisepuede = { git = "https://github.com/RodolfoFigueroa/sisepuede" }
cfc-dagster-utils = { git = "https://github.com/RodolfoFigueroa/cfc-dagster-utils" }

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "PLR0913", "COM812", "PD013", "PLR2004"]
per-file-ignores = { "tests/**/*.py" = [
    "S101",
], "notebooks/**/*.py" = [
    "B018",
    "ANN001",
    "ANN202",
    "E501",
    "N803",
    "PLR0913",
    "N806",
    "INP001",
    "ANN201",
    "T201",
    "F841",
    "PLR1711",
] }


[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "nu_afolu"

[dependency-groups]
dev = [
    "dvc[azure]>=3.67.1",
    "geemap>=0.37.2",
    "ipykernel>=6.31.0",
    "pandas-stubs>=3.0.0.260204",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
    "ty>=0.0.60",
    "types-geopandas>=1.1.3.20260518",
]
